<resources>
    <string name="app_name">FERTA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_fragment">Login to your FERTA account</string>
    <string name="sign_up_fragment">Sign up for your FERTA account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New User?</string>
    <string name="go_back">Go Back</string>
    <string name="already_user">Already a user?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="specific_desc">Clear, narrow, and understandable to be effective</string>
    <string name="specific_title">pecific?</string>
    <string name="measurable_title">easurable?</string>
    <string name="measureable_desc">Proof you\&apos;re making progress, with values</string>
    <string name="attainable_title">ttainable?</string>
    <string name="attainable_desc">Reasonably achievable in a certain time frame</string>
    <string name="relevant_title">elevant?</string>
    <string name="relevent_desc">Aligns with your values and long-term goals</string>
    <string name="time_based_title">ime-Based?</string>
    <string name="time_based_desc">Realistic and ambitious end-date to motivate task completion</string>
    <string name="next">Next</string>
    <string name="task_name_title">Task Name</string>
    <string name="time_needed_for_completion">Time needed for completion</string>
    <string name="end_date_title">End date</string>
    <string name="repeat_event">Repeat event?</string>
    <string name="can_cause_conflict">Can cause conflict?</string>
    <string name="add">Add</string>
    <string name="send_notification">Send notification?</string>
    <string name="notification_dialog_title">Add Notification(s) before event</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="repeat_dialog_title">When to repeat task</string>
    <string name="back">Back</string>
    <string name="initialize_get_setup">Let\'s get started on your Work:Rest ratio</string>
    <string name="question_current_ratio">What is your current work to rest ratio?</string>
    <string name="work">Work</string>
    <string name="rest">Rest</string>
    <string name="question_current_session_length">How long can you currently work for in a single session?</string>
    <string name="hint_ratio">Hours</string>
    <string name="question_target_ratio">What is your target work to rest ratio? (optional)</string>
    <string name="question_target_session_length">How long is the target length for a single session of work?</string>
    <string name="unavailable_times">Unavailable Times</string>
    <string name="unavailable_times_desc">Time ranges that will not be used when creating your schedule</string>
    <string name="start_colon">Start:</string>
    <string name="symbol_colon">:</string>
    <string name="hint_minutes_00">00</string>
    <string name="hint_hours_12">12</string>
    <string name="end_colon">End:</string>
    <string name="button_add_time">+ Add Time</string>
    <string name="sundays">Sundays</string>
    <string name="work_rest_ratio">Work to Rest ratio</string>
    <string name="longest_work_seesion">Longest work session</string>
    <string name="unavailability">Unavailability</string>
    <string name="change">Change</string>
    <string name="settings">Settings</string>
    <string name="display_SMART_goals_screen">Display SMART goals screen</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notifications">Notifications</string>
    <string name="notif_alert_time">Notifications Alert Time</string>
    <string name="logout">Log Out</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_60">60</string>
    <string name="del">DEL</string>

    <string-array name="hour_minute_array">
        <item>Minutes</item>
        <item>Hours</item>
    </string-array>

    <string-array name="when_repeat_array">
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
</resources>