<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_unavailable"
    tools:context=".UnavailableFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingVertical="10dp"
                android:textSize="32sp"
                android:text="@string/unavailable_times" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:paddingHorizontal="30dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/unavailable_times_desc" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:textSize="24sp"
                    android:text="@string/sundays"/>

            <Button
                    android:id="@+id/button_sunday_add_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_centerVertical="true"
                    android:text="@string/button_add_time"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray"/>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/unavailable_sundays_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

    </LinearLayout>

</ScrollView>